# hackathon-template

./: README.md  cookiecutter.json
.github/: dependabot.yml
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/tests/: test_project.py
{{cookiecutter.project_slug}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/notebooks/: start_here.ipynb
